Release 0.017:
    * Fixed ObjectD to handle DGD 1.2.110 changes to ObjRegD.
    * Changed the login process to handle separate login names and
      player-readable names.
    * Initial support for LPC telnet code on a binary port
    * Preliminary terminal support, altered Phrase support
    * Started adding subtyped object declarations
    * Added support for tag inheritance in TagD
    * Removed support for non-System wiztool objects.  Oops!
    * Added support for custom and non-System wiztool objects
    * Added a custom room-binder object for nonstandard room types
    * Started support for 'custom' rooms not loaded from UNQ files
    * SSHD support on second binary TCP port
    * Debugged extra AUTO object, put it into appropriate places

Release 0.016:
    * Improved UNQ error reporting for wrong #'s of fields in structs
    * Added (optional, currently inactive) stuff for a /usr/common AUTO
      object which will enforce call_other calling existing funcs
    * Updated to DGD 1.2.90
    * Moved all zone functionality out of ObjNumD into ZoneD
    * Changed object articles and glance descriptions to 'transitional',
      i.e. kiss the current form of them goodbye...
    * Updated for compatibility with DGD 1.2.68, which breaks back-compat
    * Removed old %get_config command
    * Made objects able to specifically remove nouns/adjs for
      multiple inheritance
    * Made load/save files use multiple parents
    * Made object nouns, adjectives and descs use inheritance
    * Made objects use multiple inheritance, not just single
    * Added wiztool commands to manipulate tags, and help for them
    * Added a number of new Tag-related APIs
    * Made rooms and zonefiles include tag data in the save files
    * Made room/object types more modular

Release 0.015pre2:
    * Tagged OBJECTs and MOBILEs
    * Added a 'Tagged' library to manage tags
    * Added a TagD to track tag types
    * Moved scripting stuff into Phantasmal from testgame/SoN